re-record settings tests

--- a/src/azure-cli/azure/cli/command_modules/security/tests/latest/recordings/test_security_settings.yaml
+++ b/src/azure-cli/azure/cli/command_modules/security/tests/latest/recordings/test_security_settings.yaml
@@ -11,12 +11,12 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - AZURECLI/2.42.0 azsdk-python-azure-mgmt-security/3.0.0 Python/3.10.9 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings?api-version=2022-05-01
   response:
     body:
-      string: '{"value":[{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":true}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/WDATP","name":"WDATP","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":false}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/WDATP_EXCLUDE_LINUX_PUBLIC_PREVIEW","name":"WDATP_EXCLUDE_LINUX_PUBLIC_PREVIEW","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":true}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/WDATP_UNIFIED_SOLUTION","name":"WDATP_UNIFIED_SOLUTION","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":false}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":false}}]}'
+      string: '{"value":[{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":false}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/WDATP","name":"WDATP","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":true}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/WDATP_EXCLUDE_LINUX_PUBLIC_PREVIEW","name":"WDATP_EXCLUDE_LINUX_PUBLIC_PREVIEW","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":false}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/WDATP_UNIFIED_SOLUTION","name":"WDATP_UNIFIED_SOLUTION","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":true}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":false}}]}'
     headers:
       api-supported-versions:
       - '1.0'
@@ -27,23 +27,21 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Sun, 11 Dec 2022 11:27:26 GMT
+      - Sun, 10 Mar 2024 15:53:42 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
-      server:
-      - Kestrel
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '749'
+      - '746'
+      x-msedge-ref:
+      - 'Ref A: C6B7CDD31E2A401C894D057FEF0CFB39 Ref B: MRS211050315047 Ref C: 2024-03-10T15:53:41Z'
     status:
       code: 200
       message: OK
@@ -61,39 +59,85 @@ interactions:
       ParameterSetName:
       - -n
       User-Agent:
-      - AZURECLI/2.42.0 azsdk-python-azure-mgmt-security/3.0.0 Python/3.10.9 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS?api-version=2022-05-01
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":true}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":false}}'
     headers:
       api-supported-versions:
       - '1.0'
       cache-control:
       - no-cache
       content-length:
-      - '212'
+      - '213'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Sun, 11 Dec 2022 11:27:28 GMT
+      - Sun, 10 Mar 2024 15:53:42 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
-      server:
-      - Kestrel
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '749'
+      - '745'
+      x-msedge-ref:
+      - 'Ref A: 22FCBB31F99349A18C286F99EFDDB047 Ref B: MRS211050313009 Ref C: 2024-03-10T15:53:42Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting show
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":false}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '220'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:53:42 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '744'
+      x-msedge-ref:
+      - 'Ref A: 8EF63F9067E34F65AFEC9B076E16BF06 Ref B: MRS211050315017 Ref C: 2024-03-10T15:53:43Z'
     status:
       code: 200
       message: OK
