--- a/src/azure-cli/azure/cli/command_modules/security/tests/latest/recordings/test_security_settings_update.yaml
+++ b/src/azure-cli/azure/cli/command_modules/security/tests/latest/recordings/test_security_settings_update.yaml
@@ -1,5 +1,53 @@
 interactions:
 - request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n --alert-sync-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":false}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '220'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:53:27 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '747'
+      x-msedge-ref:
+      - 'Ref A: 112FBCE003344904B6F060843E2DEC8C Ref B: MRS211050619027 Ref C: 2024-03-10T15:53:26Z'
+    status:
+      code: 200
+      message: OK
+- request:
     body: '{"kind": "AlertSyncSettings", "properties": {"enabled": true}}'
     headers:
       Accept:
@@ -15,9 +63,9 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - -n --enabled
+      - -n --alert-sync-settings
       User-Agent:
-      - AZURECLI/2.42.0 azsdk-python-azure-mgmt-security/3.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
   response:
@@ -33,23 +81,69 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 30 Nov 2022 13:51:59 GMT
+      - Sun, 10 Mar 2024 15:53:27 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
-      server:
-      - Kestrel
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '249'
+      - '245'
+      x-msedge-ref:
+      - 'Ref A: EC5B5ACAA0504A0898A247D2BA500DC4 Ref B: MRS211050619027 Ref C: 2024-03-10T15:53:27Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n --alert-sync-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":true}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '219'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:53:28 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '749'
+      x-msedge-ref:
+      - 'Ref A: 0926F34FFFC14B1F9B8670800DD46822 Ref B: MRS211050314053 Ref C: 2024-03-10T15:53:28Z'
     status:
       code: 200
       message: OK
@@ -69,9 +163,9 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - -n --enabled
+      - -n --alert-sync-settings
       User-Agent:
-      - AZURECLI/2.42.0 azsdk-python-azure-mgmt-security/3.0.0 Python/3.10.8 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
   response:
@@ -87,24 +181,323 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 30 Nov 2022 13:52:00 GMT
+      - Sun, 10 Mar 2024 15:53:29 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
-      server:
-      - Kestrel
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '248'
+      - '244'
+      x-msedge-ref:
+      - 'Ref A: B29A09C2A7B14C99A088FB88C2C40EBB Ref B: MRS211050314053 Ref C: 2024-03-10T15:53:28Z'
     status:
       code: 200
       message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":false}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '213'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:53:30 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '747'
+      x-msedge-ref:
+      - 'Ref A: FEB1B22A47A9448AA85768ED1CFB7CC0 Ref B: MRS211050619019 Ref C: 2024-03-10T15:53:29Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: '{"kind": "DataExportSettings", "properties": {"enabled": true}}'
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '63'
+      Content-Type:
+      - application/json
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: PUT
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":true}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '212'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:53:30 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '245'
+      x-msedge-ref:
+      - 'Ref A: A18ADED1927E4BC6AF96AA5805E7762F Ref B: MRS211050619019 Ref C: 2024-03-10T15:53:30Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":true}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '212'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:53:31 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '746'
+      x-msedge-ref:
+      - 'Ref A: FC94A5EA80354EEDB8A4AD7BAAA0B33E Ref B: MRS211050315017 Ref C: 2024-03-10T15:53:31Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: '{"kind": "DataExportSettings", "properties": {"enabled": false}}'
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '64'
+      Content-Type:
+      - application/json
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: PUT
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":false}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '213'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:53:31 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '247'
+      x-msedge-ref:
+      - 'Ref A: 03D80E76AC3D46DDBE4AD67C8ECCC4D2 Ref B: MRS211050315017 Ref C: 2024-03-10T15:53:32Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":false}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '220'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:53:32 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '745'
+      x-msedge-ref:
+      - 'Ref A: CED7D8D5CBAE4A37B1B7EA27A998859B Ref B: MRS211050315037 Ref C: 2024-03-10T15:53:33Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: '{"kind": "DataExportSettings", "properties": {"enabled": false}}'
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '64'
+      Content-Type:
+      - application/json
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: PUT
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"error":{"code":"InvalidSettingsInput","message":"Kind doesn''t match
+        the setting"}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '84'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:53:33 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '246'
+      x-msedge-ref:
+      - 'Ref A: 5778D762D5EC43BF8690F5A027346355 Ref B: MRS211050315037 Ref C: 2024-03-10T15:53:33Z'
+    status:
+      code: 400
+      message: Bad Request
 version: 1
